JumpScript/tests/baselines/reference/emitExponentiationOperator4.errors.txt
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(14,1): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(15,1): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(16,1): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(17,1): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(18,1): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(21,6): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(22,6): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(23,6): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(24,6): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump(25,6): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/es7/exponentiationOperator/emitExponentiationOperator4.jump (10 errors) ====
    var temp: any;
    
    (<number>temp) ** 3;
    (<number>--temp) ** 3;
    (<number>++temp) ** 3;
    (<number>temp--) ** 3;
    (<number>temp++) ** 3;
    
    1 ** (<number>--temp) ** 3;
    1 ** (<number>++temp) ** 3;
    1 ** (<number>temp--) ** 3;
    1 ** (<number>temp++) ** 3;
    
    (void --temp) ** 3;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    (void temp--) ** 3;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    (void 3) ** 4;
    ~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    (void temp++) ** 4;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    (void temp--) ** 4;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    
    
    1 ** (void --temp) ** 3;
         ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    1 ** (void temp--) ** 3;
         ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    1 ** (void 3) ** 4;
         ~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    1 ** (void temp++) ** 4;
         ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    1 ** (void temp--) ** 4;
         ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    
    (~ --temp) ** 3;
    (~ temp--) ** 3;
    (~ 3) ** 4;
    (~ temp++) ** 4;
    (~ temp--) ** 4;
    
    1 ** (~ --temp) ** 3;
    1 ** (~ temp--) ** 3;
    1 ** (~ 3) ** 4;
    1 ** (~ temp++) ** 4;
    1 ** (~ temp--) ** 4;